--- a/front/tuunidad-web/index.html
+++ b/front/tuunidad-web/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template con bootstrap</title>
+    <title>TuUnidad-App</title>
     <link href="assets/css/index.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -22,7 +22,10 @@
             <div class="col-12">
                 <ul class="nav nav-pills">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Registro usuarios</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Formulario usuarios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="lista-usuarios.html">Lista usuarios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="registro-vivienda.html">Registro vivienda</a>
@@ -43,6 +46,8 @@
         <div id="main-content">
             <form id="frm1">
                 <h3>Formulario de usuarios</h3>
+
+                <input type="hidden" id="usuario-id" />
 
                 <div class="row">
                     <div class="col-3">
@@ -81,7 +86,7 @@
                         <div class="mb-4">
                             <label for="slcTipoIdentificacion" class="form-label">Tipo de identificacion</label>
                             <select class="form-select" id="slcTipoIdentificacion" >
-                                <option selected>Seleccione un tipo</option>
+                                <option selected value="">Seleccione un tipo</option>
                                 <option value="1">CC</option>
                                 <option value="2">Pasaporte</option>
                               </select>
@@ -112,25 +117,17 @@
 
                     <div class="col-3">
                         <div class="mb-4">
-                            <label for="dateFechaNacimiento" class="form-label">Departamento residencia</label>
-                            <select class="form-select" >
-                                <option selected>Open this select menu</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
-                              </select>
+                            <label for="slcDepartamento" class="form-label">Departamento residencia</label>
+                            <select class="form-select" id="slcDepartamento">
+                            </select>
                         </div>
                     </div>
 
                     <div class="col-3">
                         <div class="mb-4">
-                            <label for="dateFechaNacimiento" class="form-label">Ciudad residencia</label>
-                            <select class="form-select" >
-                                <option selected>Open this select menu</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
-                              </select>
+                            <label for="slcCiudad" class="form-label">Ciudad residencia</label>
+                            <select class="form-select" id="slcCiudad">
+                            </select>
                         </div>
                     </div>
 
@@ -152,20 +149,20 @@
                     <div class="col-3">
                         <label class="form-label">Indique su genero</label>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                            <label class="form-check-label" for="flexRadioDefault1">
+                            <input class="form-check-input" type="radio" name="rdGenero" id="rdGenero1" value="F">
+                            <label class="form-check-label" for="rdGenero1">
                               Femenino
                             </label>
                           </div>
                           <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                            <label class="form-check-label" for="flexRadioDefault2">
+                            <input class="form-check-input" type="radio" name="rdGenero" id="rdGenero2" value="M">
+                            <label class="form-check-label" for="rdGenero2">
                               Masculino 
                             </label>
                           </div>
                           <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-                            <label class="form-check-label" for="flexRadioDefault3">
+                            <input class="form-check-input" type="radio" name="rdGenero" id="rdGenero3" value="O">
+                            <label class="form-check-label" for="rdGenero3">
                               Otro 
                             </label>
                           </div>
@@ -173,8 +170,8 @@
 
                     <div class="col-1">
                         <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="chkEsPropietario">
-                            <label class="form-check-label" for="chkEsPropietario">Es propietario</label>
+                            <input type="checkbox" class="form-check-input" id="ckbEsPropietario" value="si">
+                            <label class="form-check-label" for="ckbEsPropietario">Es propietario</label>
                         </div>
                     </div>
 
@@ -182,7 +179,8 @@
                 <br>
                 <div class="row">
                     <div class="col-12">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-success">Enviar</button>
+                        <button type="reset" class="btn btn-info">Limpiar</button>
                     </div>
                 </div>
             </form>
@@ -198,6 +196,7 @@
         crossorigin="anonymous"></script>
 
 
+    <script src="assets/js/core.js"></script>
     <script src="assets/js/index.js"></script>
 </body>
 
