--- a/front/tuunidad-web/lista-usuarios.html
+++ b/front/tuunidad-web/lista-usuarios.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TuUnidad-App</title>
     <link href="assets/css/index.css" rel="stylesheet">
+    <link href="assets/css/lista-usuarios.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -22,10 +23,13 @@
             <div class="col-12">
                 <ul class="nav nav-pills">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Registro usuarios</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Formulario usuarios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="registro-vivienda.html">Registro vivienda</a>
+                        <a class="nav-link active" aria-current="page" href="lista-usuarios.html">Lista usuarios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="registro-vivienda.html">Registro vivienda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Registro vehiculos</a>
@@ -41,18 +45,45 @@
         <br>
 
         <div id="main-content">
-            <form>
-                <h3>Formulario de viviendas</h3>
+            <h3>Lista de usuarios</h3>
 
-            </form>
+            <table id="table-usuarios" class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Apellido</th>
+                    <th scope="col">Telefono</th>
+                    <th scope="col">Identificacion</th>
+                    <th scope="col">Edad</th>
+                    <th scope="col">Cantidad vehiculos</th>
+                    <th scope="col">Departamento</th>
+                    <th scope="col">Ciudad</th>
+                    <th scope="col">Direccion</th>
+                    <th scope="col">Color</th>
+                    <th scope="col">Genero</th>
+                    <th scope="col">Propietario</th>
+                    <th scope="col">Opciones</th>
+                  </tr>
+                </thead>
+                <tbody>
+                </tbody>
+              </table>
+
         </div>
 
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <script src="assets/js/jquery.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+
+    <script src="assets/js/core.js"></script>    
+    <script src="assets/js/lista-usuarios.js"></script>
 </body>
 
 </html>
