--- a/front/tuunidad-web/lista-usuarios.html
+++ b/front/tuunidad-web/lista-usuarios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TuUnidad-App</title>
+    <title>TuUnidad-App - Lista usuarios</title>
     <link href="assets/css/index.css" rel="stylesheet">
     <link href="assets/css/lista-usuarios.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
