--- a/front/tuunidad-web/index.html
+++ b/front/tuunidad-web/index.html
@@ -1,203 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TuUnidad-App - Index</title>
     <link href="assets/css/index.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-
-<body>
-    <div class="container" id="main-container">
-        <div class="row">
-            <div class="col-12">
-                <img src="assets/src/images/logo-sena-negro.jpg" width="100px" height="100px"
-                    class="rounded mx-auto d-block" alt="sena">
-            </div>
-        </div>
-        <div class="row" id="main-nav">
-            <div class="col-12">
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Formulario usuarios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="lista-usuarios.html">Lista usuarios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="registro-vivienda.html">Registro vivienda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Registro vehiculos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Ingreso</a>
-                    </li>
-                </ul>
-            </div>
-            <br>
-            <br>
-        </div>
-        <br>
-
-        <div id="main-content">
-            <form id="frm1">
-                <h3>Formulario de usuarios</h3>
-
-                <input type="hidden" id="usuario-id" />
-
-                <div class="row">
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="txtNombre" class="form-label">Nombre</label>
-                            <input type="text" class="form-control" id="txtNombre" placeholder="Ingrese nombre de usuario">
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="txtApellido" class="form-label">Apellido</label>
-                            <input type="text" class="form-control" id="txtApellido" placeholder="Ingrese apellido de usuario">
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="txtCorreo" class="form-label">Correo</label>
-                            <input type="email" class="form-control" id="txtCorreo" placeholder="Ingrese correo de usuario">
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="txtTelefono" class="form-label">Telefono</label>
-                            <input type="tel" class="form-control" id="txtTelefono" placeholder="Ingrese telefono de usuario">
-                        </div>
-                    </div>
-
-                </div>
-                
-                <div class="row">
-
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="slcTipoIdentificacion" class="form-label">Tipo de identificacion</label>
-                            <select class="form-select" id="slcTipoIdentificacion" >
-                                <option selected value="">Seleccione un tipo</option>
-                                <option value="1">CC</option>
-                                <option value="2">Pasaporte</option>
-                              </select>
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="txtIdentificacion" class="form-label">Identificacion</label>
-                            <input type="text" class="form-control" id="txtIdentificacion" placeholder="Ingrese tipo de identificacion de usuario">
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="dateFechaNacimiento" class="form-label">Fecha nacimiento</label>
-                            <input type="date" class="form-control" id="dateFechaNacimiento">
-                        </div>
-                    </div>
-                    
-
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="rangeCantidadVehiculos" class="form-label">Cantidad de vehiculos</label>
-                            <input type="range" class="form-control" id="rangeCantidadVehiculos" min="0" max="5" step="1">
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="slcDepartamento" class="form-label">Departamento residencia</label>
-                            <select class="form-select" id="slcDepartamento">
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="slcCiudad" class="form-label">Ciudad residencia</label>
-                            <select class="form-select" id="slcCiudad">
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="txtDireccion" class="form-label">Direccion</label>
-                            <input type="text" class="form-control" id="txtDireccion" placeholder="Ingrese direccion de usuario">
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="mb-4">
-                            <label for="colorFavorito" class="form-label">Color favorito</label>
-                            <input type="color" class="form-control" id="colorFavorito">
-                        </div>
-                    </div>
-
-
-                    <div class="col-3">
-                        <label class="form-label">Indique su genero</label>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="rdGenero" id="rdGenero1" value="F">
-                            <label class="form-check-label" for="rdGenero1">
-                              Femenino
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="radio" name="rdGenero" id="rdGenero2" value="M">
-                            <label class="form-check-label" for="rdGenero2">
-                              Masculino 
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="radio" name="rdGenero" id="rdGenero3" value="O">
-                            <label class="form-check-label" for="rdGenero3">
-                              Otro 
-                            </label>
-                          </div>
-                    </div>
-
-                    <div class="col-1">
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="ckbEsPropietario" value="si">
-                            <label class="form-check-label" for="ckbEsPropietario">Es propietario</label>
-                        </div>
-                    </div>
-
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-12">
-                        <button type="submit" class="btn btn-success">Enviar</button>
-                        <button type="reset" class="btn btn-info">Limpiar</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-
-    </div>
-
-
     <script src="assets/js/jquery.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
-
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
     <script src="assets/js/core.js"></script>
     <script src="assets/js/index.js"></script>
-</body>
+    <title>Tu Unidad Web</title>
+</head>
+<body>
+    <div class="container" id="main-container">
 
+        <div id="content-header"> header </div>
+
+        <br>
+        <div id="content-main"> main </div>
+        <br>
+
+        <div id="content-footer"> footer </div>
+    </div>
+</body>
 </html>
