--- a/front/tuunidad-web/index.html
+++ b/front/tuunidad-web/index.html
@@ -34,5 +34,18 @@
 
         <div id="content-footer"> footer </div>
     </div>
+
+    <div id="alerts">
+    </div>
+
+    
+
+    <div id="xmask">
+        <div class="content">
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
